--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "node": "18"
   },
   "dependencies": {
-    "dayjs": "1.11.7"
+    "dayjs": "1.11.7",
+    "flatpickr": "4.6.13",
+    "he": "1.2.0"
   }
 }
